--- a/css/bs-styles.css
+++ b/css/bs-styles.css
@@ -8,6 +8,6 @@
 .bs-widget legend { padding: 0 0 10px; font-weight: 700; }
 .shortcode {padding: 5px; background: #fefefa; outline: 1px solid #e0e0e0; margin: 0 0 10px; font-family: monospace; }
 .shortcode strong { font-family: sans-serif; }
-.bs_api_usage { background: #fff; padding: 10px; border-radius: 5px; font-size: 1.2em; }
+.bs_api_usage { background: #fff; padding: 2px 10px; border-radius: 5px; font-size: 1.2em; }
 .bs-widget .prime p { width: 49%; float: left; }
 .bs-widget .prime p:nth-of-type(odd) { margin-right: 5px; }
